--- a/composer.json
+++ b/composer.json
@@ -1,117 +1,111 @@
 {
-  "name": "jhumanj/opnform",
-  "description": "A beautiful open-source form builder ",
-  "keywords": [
-    "form",
-    "api",
-    "laravel",
-    "vue",
-    "nuxt",
-    "Tailwind"
-  ],
-  "license": "MIT",
-  "type": "project",
-  "require": {
-    "php": "^8.2",
-    "ext-json": "*",
-    "aws/aws-sdk-php": "^3.183",
-    "doctrine/dbal": "^3.4",
-    "giggsey/libphonenumber-for-php": "^8.13",
-    "google/apiclient": "^2.15.0",
-    "guzzlehttp/guzzle": "^7.0.1",
-    "jhumanj/laravel-model-stats": "^0.4.0",
-    "laravel/cashier": "^13.4",
-    "laravel/framework": "^9.19.0",
-    "laravel/horizon": "^5.7",
-    "laravel/socialite": "^5.2",
-    "laravel/tinker": "^2.6",
-    "laravel/ui": "^3.2",
-    "laravel/vapor-cli": "^1.38",
-    "laravel/vapor-core": "^2.21",
-    "laravel/vapor-ui": "^1.5",
-    "league/flysystem-aws-s3-v3": "^3.0",
-    "maatwebsite/excel": "^3.1",
-    "openai-php/client": "^0.6.4",
-    "propaganistas/laravel-disposable-email": "^2.2",
-    "sentry/sentry-laravel": "^2.11.0",
-    "spatie/laravel-data": "^3.12",
-    "spatie/laravel-sitemap": "^6.0",
-    "spatie/laravel-sluggable": "^3.0",
-    "stevebauman/purify": "^v6.2.0",
-    "tymon/jwt-auth": "^1.0.2",
-    "vinkla/hashids": "^10.0"
-  },
-  "require-dev": {
-    "barryvdh/laravel-ide-helper": "^2.12",
-    "fakerphp/faker": "^1.9.1",
-    "laravel/dusk": "^6.8",
-    "laravel/pint": "^1.14",
-    "laravel/sail": "^1.18",
-    "mockery/mockery": "^1.4.2",
-    "nunomaduro/collision": "^6.1",
-    "pestphp/pest": "^1.15",
-    "pestphp/pest-plugin-faker": "^1.0",
-    "pestphp/pest-plugin-laravel": "^1.1",
-    "pestphp/pest-plugin-parallel": "^1.2",
-    "phpunit/phpunit": "^9.3.3",
-    "spatie/laravel-ignition": "^1.0",
-    "spatie/laravel-ray": "^1.17"
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "platform": {
-      "ext-pcntl": "8.0",
-      "ext-posix": "8.0"
-    },
-    "allow-plugins": {
-      "pestphp/pest-plugin": true,
-      "php-http/discovery": true
-    }
-  },
-  "extra": {
-    "laravel": {
-      "dont-discover": [
-        "laravel/dusk"
-      ]
-    },
-    "google/apiclient-services": [
-      "Sheets"
-    ]
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/",
-      "Database\\Factories\\": "database/factories/",
-      "Database\\Seeders\\": "database/seeders/"
-    },
-    "files": [
-      "app/helpers.php"
-    ]
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-    }
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover --ansi"
+    "name": "jhumanj/opnform",
+    "description": "A beautiful open-source form builder ",
+    "keywords": [
+      "form",
+      "api",
+      "laravel",
+      "vue",
+      "nuxt",
+      "Tailwind"
     ],
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-    ],
-    "post-create-project-cmd": [
-      "@php artisan key:generate --ansi",
-      "@php artisan jwt:secret --force --ansi"
-    ],
-    "post-update-cmd": [
-      "@php artisan vapor-ui:publish --ansi"
-    ]
-  }
+    "license": "MIT",
+    "type": "project",
+    "require": {
+        "php": "^8.2",
+        "ext-json": "*",
+        "aws/aws-sdk-php": "*",
+        "doctrine/dbal": "*",
+        "giggsey/libphonenumber-for-php": "*",
+        "google/apiclient": "^2.16",
+        "guzzlehttp/guzzle": "*",
+        "laravel/cashier": "*",
+        "laravel/framework": "^11.9",
+        "laravel/horizon": "*",
+        "laravel/socialite": "*",
+        "laravel/tinker": "^2.9",
+        "laravel/ui": "*",
+        "laravel/vapor-cli": "*",
+        "laravel/vapor-core": "*",
+        "league/flysystem-aws-s3-v3": "*",
+        "maatwebsite/excel": "^3.1",
+        "openai-php/client": "*",
+        "propaganistas/laravel-disposable-email": "*",
+        "sentry/sentry-laravel": "*",
+        "spatie/laravel-data": "^4.6",
+        "spatie/laravel-sitemap": "*",
+        "spatie/laravel-sluggable": "*",
+        "stevebauman/purify": "*",
+        "tymon/jwt-auth": "*",
+        "vinkla/hashids": "*"
+    },
+    "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.0.0",
+        "fakerphp/faker": "^1.23",
+        "laravel/dusk": "^8.2.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "*",
+        "pestphp/pest": "^2.0",
+        "spatie/laravel-ignition": "*",
+        "spatie/laravel-ray": "*"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "platform": {
+          "ext-pcntl": "8.0",
+          "ext-posix": "8.0"
+        },
+        "allow-plugins": {
+          "pestphp/pest-plugin": true,
+          "php-http/discovery": true
+        }
+      },
+      "extra": {
+        "laravel": {
+          "dont-discover": [
+            "laravel/dusk"
+          ]
+        },
+        "google/apiclient-services": [
+          "Sheets"
+        ]
+      },
+      "autoload": {
+        "psr-4": {
+          "App\\": "app/",
+          "Database\\Factories\\": "database/factories/",
+          "Database\\Seeders\\": "database/seeders/"
+        },
+        "files": [
+          "app/helpers.php"
+        ]
+      },
+      "autoload-dev": {
+        "psr-4": {
+          "Tests\\": "tests/"
+        }
+      },
+      "minimum-stability": "dev",
+      "prefer-stable": true,
+      "scripts": {
+        "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
+        "post-autoload-dump": [
+          "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+          "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+          "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+          "@php artisan key:generate --ansi",
+          "@php artisan jwt:secret --force --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+        ]
+      }
 }
